# zed-n8n-as-code

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  extension.toml
src/: commands.rs  completions.rs  lib.rs  service.rs  settings.rs
