[package]
name = "zed-n8n-as-code"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Zed extension for n8n-as-code"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Note: Zed extension API provides http_client module - we use that instead of reqwest
# No additional HTTP dependencies needed for wasm32-wasip1 target
